force-app/zurich-base/main/default/objects/GDPR_OfferDeletion__mdt/GDPR_OfferDeletion__mdt.object-meta.xml
<CustomObject>
    <label>GDPR Borrado Oferta</label>
    <pluralLabel>GDPR Borrado Ofertas</pluralLabel>
</CustomObject>