force-app/zurich-base/main/default/objects/GDPR_OfferDeletion__mdt/fields/Fisica__c.field-meta.xml
<CustomField>
    <fullName>Fisica__c</fullName>
    <label>Fisica</label>
    <type>TextArea</type>
</CustomField>