force-app/zurich-base/main/default/objects/GDPR_OfferDeletion__mdt/fields/Juridica__c.field-meta.xml
<CustomField>
    <fullName>Juridica__c</fullName>
    <label>Jurídica</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>