force-app/zurich-base/main/default/objects/GDPR_OfferDeletion__mdt/fields/Ramo__c.field-meta.xml
<CustomField>
    <fullName>Ramo__c</fullName>
    <label>Ramo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>