force-app/zurich-base/main/default/objects/GDPR_OfferDeletion__mdt/validationRules/VR_PeriodoGDPRFisica.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_PeriodoGDPRFisica</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Fisica__c , &quot;^\\d+[AD]$&quot;) )</errorConditionFormula>
    <errorMessage>El valor debe de contener un número seguido de la letra &apos;A&apos; o &apos;D&apos;</errorMessage>
</ValidationRule>